; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_psignal_thread_with_reason.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_psignal_thread_with_reason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_reason = type { i32 }

@TASK_NULL = common dso_local global i32 0, align 4
@PSIG_THREAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @psignal_thread_with_reason(i32 %0, i32 %1, i32 %2, %struct.os_reason* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.os_reason*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.os_reason* %3, %struct.os_reason** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @TASK_NULL, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @PSIG_THREAD, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load %struct.os_reason*, %struct.os_reason** %8, align 8
  %15 = call i32 @psignal_internal(i32 %9, i32 %10, i32 %11, i32 %12, i32 %13, %struct.os_reason* %14)
  ret void
}

declare dso_local i32 @psignal_internal(i32, i32, i32, i32, i32, %struct.os_reason*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
